# glassdoor-bff-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  glassdoor_jobs.py  pyproject.toml  requirements-runtime.txt  requirements.txt  searches.csv
.github/workflows/: ci.yml
api/: __init__.py  admin.py  auth.py  db.py  logging_ctx.py  main.py  metrics.py  schemas.py  security.py  webhooks.py  worker.py
api/static/: console.html
glassdoor_scraper/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  export.py  health.py  logging_setup.py  models.py  parser.py  presenter.py  ratelimit.py  reporting.py  runstate.py  scraper.py  session.py
tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_export.py  test_parser.py  test_ratelimit.py  test_reporting.py  test_runstate.py  test_scraper.py  test_session.py  test_webhooks.py
tests/fixtures/: bff_page1.json  bff_variant.json  location.json
